# pict

./: .gitignore  CMakeLists.txt  Containerfile  LICENSE.TXT  Microsoft.Test.Pict.nuspec  README.md
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml  main.yml  nuget-publish.yml
api/: CMakeLists.txt  combination.cpp  deriver.cpp  deriver.h  exclusion.cpp  generator.h  model.cpp  parameter.cpp  pict.def  pict.rc  pictapi.cpp  pictapi.h  resource.h  task.cpp  trie.h  worklist.cpp
api-usage/: pictapi-sample.cpp
cli/: CMakeLists.txt  ccommon.cpp  ccommon.h  cmdline.cpp  cmdline.h  common.cpp  common.h  cparser.cpp  cparser.h  ctokenizer.cpp  ctokenizer.h  gcd.cpp  gcd.h  gcdexcl.cpp  gcdexcl.h  gcdmodel.cpp  gcdmodel.h  model.cpp  model.h  mparser.cpp  pict.cpp  strings.cpp  strings.h  ver.h
clidll/: Resource.rc  dllmain.cpp  pictclidll.def
clidll-usage/: pictclidll-sample.cpp
doc/: pict.md
doc/sample-models/: create_volume.txt  machine.txt  strncpy.txt  word_font.txt
test/: .tests  CMakeLists.txt  errors.ini  test.pl
test/+perf/: .tests  10##20.txt  10##N.txt  2##100.txt  3##13.txt  3##4.txt  4##1.3##39.2##35.txt  4##15.3##17.2##29.txt  perf001.txt  perf002.txt  perf003.txt  perf004.txt  perf005.txt  perf011.txt
test/+real/: .tests  real032.txt  real038.txt  real100.txt  real101.txt  real102.txt
test/arg/: .tests  arg001.txt  arg002.txt  arg003.txt  arg004.txt  arg005.txt  arg006.txt  arg007.txt  arg008.txt  arg009.txt  arg010.txt
test/bug/: .tests  bug001.txt  bug002.txt  bug003.txt  bug004.txt  bug006.txt  bug007.txt  bug008.txt  bug010.txt  bug011.txt  bug012.txt  bug013.txt  bug014.txt  bug015.txt  bug020.txt  bug021.txt  bug022.txt  bug023.txt  bug024.txt
test/clus/: .tests  clus001.txt  clus002.txt  clus003.txt  clus004.txt  clus005.txt  clus006.txt  clus007.txt  clus008.txt  clus009.txt  clus010.txt  clus011.txt  clus012.txt  clus013.txt  clus014.txt  clus015.txt  clus016.txt  clus017.txt  clus018.txt  clus019.txt  clus020.txt  clus021.txt  clus022.txt  clus023.txt  clus024.txt  clus025.txt  clus026.txt  clus027.txt  clus028.txt  clus029.txt  clus100.txt  clus101.txt  clus102.txt
test/cons/: .tests  cons001.txt  cons002.txt  cons003.txt  cons004.txt  cons005.txt  cons006.txt  cons007.txt  cons008.txt  cons009.txt  cons010.txt  cons011.txt  cons012.txt  cons013.txt  cons014.txt  cons020.txt  cons021.txt  cons030.txt  cons031.txt  cons032.txt  cons033.txt  cons034.txt  cons035.txt  cons036.txt  cons037.txt  cons038.txt  cons039.txt  cons040.txt  cons041.txt  cons042.txt  cons043.txt  cons044.txt  cons045.txt  cons046.txt  cons047.txt  cons048.txt  cons049.txt  cons050.txt  cons051.txt  cons052.txt  (+61 more)
test/func/: .tests  func002.txt  func003.txt  func004.txt  func005.txt  func006.txt  func008.txt  func020.txt  func021.txt  func022.txt  func023.txt  func024.txt  func025.txt  func026.txt  func027.txt  func028.txt  func029.txt
test/modl/: .tests  modl001.txt  modl002.txt  modl003.txt  modl004.txt  modl005.txt  modl006.txt  modl007.txt  modl008.txt  modl009.txt  modl010.txt  modl011.txt  modl012.txt  modl013.txt  modl014.txt  modl015.txt  modl016.txt  modl017.txt  modl018.txt  modl019.txt  modl020.txt  modl021.txt  modl022.txt  modl023.txt
test/para/: .tests  para001.txt  para002.txt  para003.txt  para004.txt  para005.txt  para006.txt  para008.txt  para011.txt  para012.txt  para013.txt  para014.txt  para016.txt  para017.txt  para018.txt  para019.txt  para022.txt  para023.txt
test/prp/: .tests  prp001.txt  prp002.txt  prp003.txt  prp004.txt  prp005.txt  prp006.txt  prp007.txt  prp008.txt  prp020.txt  prp021.txt
test/real/: .tests  real001.txt  real002.txt  real003.txt  real004.txt  real005.txt  real006.txt  real007.txt  real009.txt  real010.txt  real011.txt  real012.txt  real020.txt  real021.txt  real022.txt  real023.txt  real024.txt  real025.txt  real026.txt  real027.txt  real030.txt  real031.txt  real033.txt  real034.txt  real035.txt  real036.txt  real037.txt  real038.txt  real039.txt  real201.txt
test/seed/: .tests  seed001.sed  seed001.txt  seed002.txt  seed003.sed  seed004.sed  seed005.sed  seed006.sed  seed007.sed  seed010.txt  seed011.txt  seed012.txt  seed013.txt  seed014.txt  seed015.txt  seed016.txt  seed017.txt
test/term/: .tests  term001.txt  term002.txt  term003.txt  term004.txt  term010.txt  term011.txt  term012.txt  term013.txt  term021.txt  term022.txt  term023.txt  term024.txt
test/wght/: .tests  wght001.txt  wght002.txt  wght003.txt
